k8s/kong-vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kong-vue
  name: kong-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong-vue
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/konga_kong-net: "true"
        io.kompose.service: kong-vue
    spec:
      containers:
        - image: kong-vue:1.0
          name: kong-vue
          ports:
            - containerPort: 3005
          resources: {}
      restartPolicy: Always
status: {}
